test/langtools/tools/javac/superInit/SuperInitBad08.out
SuperInitBad08.java:11:14: compiler.err.cant.ref.before.ctor.called: this
1 error
